i lied this should be the last one... fixed issue where report screen was cut off on really small screens like iphone SE

--- a/src/style.css
+++ b/src/style.css
@@ -181,6 +181,8 @@ canvas {
     }
     #reportScreen{
       max-width: 90vw;
+      max-height: 60vh;
+      overflow-y: auto;
       width: 100%;
       box-sizing: border-box;
       font-size: 1.1em;
